--- a/par.css
+++ b/par.css
@@ -1,62 +1,48 @@
-#container { text-align: center; margin: 20px; }
-h2 { color: #CCC; }
-a { text-decoration: none; color: #EC5C93; }
-
-.bar-main-container {
-  margin: 10px auto;
-  width: 300px;
-  height: 50px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  font-family: sans-serif;
-  font-weight: normal;
-  font-size: 0.8em;
-  color: #FFF;
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+.progress-counter{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.number{
+  position: absolute;
+}
+svg {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transform: rotate(-90deg) scale(1.5);
 }
 
-.wrap { padding: 8px; }
-
-.bar-percentage {
-  float: left;
-  background: rgba(0,0,0,0.13);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  padding: 9px 0px;
-  width: 18%;
-  height: 16px;
-}
-
-.bar-container {
-  float: right;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  height: 10px;
-  background: rgba(0,0,0,0.13);
-  width: 78%;
-  margin: 12px 0px;
-  overflow: hidden;
-}
-
-.bar {
-  float: left;
-  background: #FFF;
+svg circle {
+  width: 100%;
   height: 100%;
-  -webkit-border-radius: 10px 0px 0px 10px;
-  -moz-border-radius: 10px 0px 0px 10px;
-  border-radius: 10px 0px 0px 10px;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: alpha(opacity=100);
-  -moz-opacity: 1;
-  -khtml-opacity: 1;
-  opacity: 1;
+  fill: none;
+  stroke: #191919;
+  stroke-width: 20;
+  transform: translate(5px, 5px);
+  stroke-dasharray: 440;
+  stroke-dashoffset: 440;
 }
 
-/* COLORS */
-.azure   { background: #38B1CC; }
-.emerald { background: #2CB299; }
-.violet  { background: #8E5D9F; }
-.yellow  { background: #EFC32F; }
-.red     { background: #E44C41; }
+svg circle:nth-child(2) {
+  stroke-width: 3;
+  stroke: url(#gradient-circle);
+}
+
+svg circle {
+  stroke-dashoffset: 132;
+  stroke: #edfaf9;
+  animation: rotate-circle 1s linear;
+}
+
+@keyframes rotate-circle {
+  0%{stroke-dashoffset: 440;}
+  100%{stroke-dashoffset: 132;}
+}
