--- a/par.css
+++ b/par.css
@@ -1,48 +1,21 @@
-.container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  height: 100vh;
+.canvas-graph{
+  position:relative;
+  width:89px;
+  height:89px;
 }
-.progress-counter{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.number{
+.canvas-text{
+  color: #00c874;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: 500;
   position: absolute;
-}
-svg {
-  position: relative;
-  width: 150px;
-  height: 150px;
-  transform: rotate(-90deg) scale(1.5);
-}
-
-svg circle {
-  width: 100%;
-  height: 100%;
-  fill: none;
-  stroke: #191919;
-  stroke-width: 20;
-  transform: translate(5px, 5px);
-  stroke-dasharray: 440;
-  stroke-dashoffset: 440;
-}
-
-svg circle:nth-child(2) {
-  stroke-width: 3;
-  stroke: url(#gradient-circle);
-}
-
-svg circle {
-  stroke-dashoffset: 132;
-  stroke: #edfaf9;
-  animation: rotate-circle 1s linear;
-}
-
-@keyframes rotate-circle {
-  0%{stroke-dashoffset: 440;}
-  100%{stroke-dashoffset: 132;}
+  z-index: 1;
+  width: 55px;
+  height: 22px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
